<resources>
    <!-- App name -->
    <string name="app_name">FrostSamurai</string>

    <!-- Login screen strings -->
    <string name="email_hint">Enter your email</string>
    <string name="pwd">Enter your password</string>
    <string name="forgot_pwd">Forgot your password?</string>
    <string name="login">Log In</string>
    <string name="signup_prompt">Don\'t have an account? Sign up</string>
    <string name = "logout">Logout</string>

    <!-- Register screen strings -->
    <string name="confirm_pwd">Re-enter your password</string>
    <string name="signup">Sign Up</string>
    <string name="login_prompt">Already have an account? Log in</string>

    <!-- AR screen strings -->
    <string name="place">Place</string>

    <!-- General error and success messages -->
    <string name="fill_fields">Please fill in all fields</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="registration_success">Registration successful</string>
    <string name="login_failed">Login failed</string>
    <string name="user_not_found">User not found</string>
    <string name="welcome">Welcome!</string>

    <!-- Puan ve Can string kaynakları -->
    <string name="score_text">Puan: %1$d</string>
    <string name="lives_text">Can: %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ar">AR</string>

    <!-- Market -->
    <string name="symmetric_shapes">Simetrik Şekiller</string>
    <string name="asymmetric_shapes">Asimetrik Şekiller</string>
    <string name="symmetric_desc">Burada simetrik şekilleri bulabilirsiniz.</string>
    <string name="asymmetric_desc">Burada asimetrik şekilleri bulabilirsiniz.</string>
    <string name="snowflake_desc">Kar tanesi - Simetrik bir örnek.</string>
    <string name="branch_desc">Ağaç dalı - Asimetrik bir örnek.</string>

    <string name="buy_symmetric">Simetrik Şekil Ekle</string>
    <string name="buy_asymmetric">Asimetrik Şekil Ekle</string>
    <string name="snowflake_icon_desc">Kar tanesi ikonu</string>
    <string name="branch_icon_desc">Ağaç dalı ikonu</string>
</resources>
